noah helped me fix layout hehe

--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ body {
 
 .nav {
     display: flex;
-    flex: auto;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 img {
